Finish 80% of User Management
- Role Template
- Update Password

--- a/Source/Website/Portals/_default/Skins/Assets/css_skin/dnn-custom.css
+++ b/Source/Website/Portals/_default/Skins/Assets/css_skin/dnn-custom.css
@@ -428,3 +428,8 @@ ul#ControlBar_Module_ModulePosition li
 {
     background-color: #cce8ff !important;
 }
+.ui-dialog-content
+{
+    text-align: justify;
+    line-height: 30px;
+}
